Model refactor: assign Person to VaccinationSlot (instead of Injection to Person)