@@ -17,16 +17,18 @@
 package org.acme.vaccinationscheduler.bootstrap;
 
 import static java.time.temporal.ChronoUnit.DAYS;
-import static java.time.temporal.ChronoUnit.MINUTES;
+import static java.time.temporal.ChronoUnit.HOURS;
 import static java.time.temporal.ChronoUnit.YEARS;
 
 import java.time.DayOfWeek;
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.temporal.TemporalAdjusters;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Random;
 import java.util.stream.Collectors;
 
@@ -34,14 +36,17 @@ import javax.enterprise.context.ApplicationScoped;
 import javax.enterprise.event.Observes;
 import javax.inject.Inject;
 
-import org.acme.vaccinationscheduler.domain.Injection;
 import org.acme.vaccinationscheduler.domain.Location;
 import org.acme.vaccinationscheduler.domain.Person;
+import org.acme.vaccinationscheduler.domain.Timeslot;
 import org.acme.vaccinationscheduler.domain.VaccinationCenter;
 import org.acme.vaccinationscheduler.domain.VaccinationSchedule;
+import org.acme.vaccinationscheduler.domain.VaccinationSlot;
 import org.acme.vaccinationscheduler.domain.VaccineType;
 import org.acme.vaccinationscheduler.persistence.VaccinationScheduleRepository;
 import org.eclipse.microprofile.config.inject.ConfigProperty;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import io.quarkus.runtime.StartupEvent;
 
@@ -60,6 +65,8 @@ public class DemoDataGenerator {
 
     public static final LocalDate MINIMUM_BIRTH_DATE = LocalDate.of(1930, 1, 1);
     public static final int BIRTH_DATE_RANGE_LENGTH = (int) DAYS.between(MINIMUM_BIRTH_DATE, LocalDate.of(2000, 1, 1));
+
+    protected static final Logger logger = LoggerFactory.getLogger(DemoDataGenerator.class);
 
     @ConfigProperty(name = "demo-data.vaccination-center-count", defaultValue = "3")
     int vaccinationCenterCount;
@@ -80,22 +87,23 @@ public class DemoDataGenerator {
     VaccinationScheduleRepository vaccinationScheduleRepository;
 
     public void generateDemoData(@Observes StartupEvent startupEvent) {
-        List<VaccineType> vaccineTypeList = List.of(
+        List<VaccineType> vaccineTypeList = Arrays.asList(
                 new VaccineType("Pfizer", 19, 21),
                 new VaccineType("Moderna", 26, 28),
                 new VaccineType("AstraZeneca", 4 * 7, 6 * 7, 55)
         );
+
         LocalDate windowStartDate = LocalDate.now().with(TemporalAdjusters.next(DayOfWeek.MONDAY));
         int windowDaysLength = 5;
         LocalTime dayStartTime = LocalTime.of(9, 0);
-        int injectionDurationInMinutes = 15;
-        int injectionsPerLinePerDay = (int) (MINUTES.between(dayStartTime, LocalTime.of(17, 0))
-                / injectionDurationInMinutes);
+        int injectionsPerLinePerTimeslot = 4;
+        int timeslotsPerLinePerDay = (int) HOURS.between(dayStartTime, LocalTime.of(17, 0));
 
         Random random = new Random(17);
         List<VaccinationCenter> vaccinationCenterList = new ArrayList<>(vaccinationCenterCount);
         int massCount = (int) Math.round(massVaccinationCenterRatio * vaccinationCenterCount);
         int massExtraLineCount = totalLineCount - vaccinationCenterCount;
+        long vaccinationCenterId = 0L;
         for (int i = 0; i < vaccinationCenterCount; i++) {
             String name = VACCINATION_CENTER_NAMES[i % VACCINATION_CENTER_NAMES.length]
                     + (i < VACCINATION_CENTER_NAMES.length ? "" : " " + (i / VACCINATION_CENTER_NAMES.length + 1));
@@ -106,25 +114,57 @@ public class DemoDataGenerator {
             } else {
                 lineCount = 1;
             }
-            vaccinationCenterList.add(new VaccinationCenter(name, pickLocation(random), lineCount));
+            vaccinationCenterList.add(new VaccinationCenter(vaccinationCenterId++, name, pickLocation(random),
+                    lineCount, injectionsPerLinePerTimeslot));
         }
 
-        List<LocalDateTime> timeslotDateTimeList = new ArrayList<>(windowDaysLength * injectionsPerLinePerDay);
+        List<Timeslot> timeslotList = new ArrayList<>(windowDaysLength * timeslotsPerLinePerDay * totalLineCount);
         for (int dayIndex = 0; dayIndex < windowDaysLength; dayIndex++) {
             LocalDate date = windowStartDate.plusDays(dayIndex);
-            for (int timeIndex = 0; timeIndex < injectionsPerLinePerDay; timeIndex++) {
-                LocalTime time = dayStartTime.plusMinutes(injectionDurationInMinutes * timeIndex);
-                timeslotDateTimeList.add(LocalDateTime.of(date, time));
+            for (int timeslotIndex = 0; timeslotIndex < timeslotsPerLinePerDay; timeslotIndex++) {
+                timeslotList.add(new Timeslot(date,
+                        dayStartTime.plusHours(timeslotIndex), dayStartTime.plusHours(timeslotIndex + 1)));
             }
         }
 
-        int personListSize = (totalLineCount * injectionsPerLinePerDay * windowDaysLength) * 5 / 4; // 25% too many
+        List<VaccinationSlot> vaccinationSlotList = new ArrayList<>();
+        long vaccinationSlotId = 0L;
+        for (int dayIndex = 0; dayIndex < windowDaysLength; dayIndex++) {
+            LocalDate date = windowStartDate.plusDays(dayIndex);
+            List<Timeslot> dayTimeslotList = timeslotList.stream()
+                    .filter(timeslot -> timeslot.getDate().equals(date))
+                    .collect(Collectors.toList());
+            for (VaccinationCenter vaccinationCenter : vaccinationCenterList) {
+                Map<VaccineType, Integer> vaccineTypeToLineCountMap = new HashMap<>(vaccineTypeList.size());
+                for (int lineIndex = 0; lineIndex < vaccinationCenter.getLineCount(); lineIndex++) {
+                    VaccineType vaccineType = pickVaccineType(vaccineTypeList, random, null);
+                    int lineCount = vaccineTypeToLineCountMap.computeIfAbsent(vaccineType, key -> 0);
+                    lineCount++;
+                    vaccineTypeToLineCountMap.put(vaccineType, lineCount);
+                }
+                for (Timeslot timeslot : dayTimeslotList) {
+                    int lineIndexOffset = 0;
+                    for (Map.Entry<VaccineType, Integer> entry : vaccineTypeToLineCountMap.entrySet()) {
+                        VaccineType vaccineType = entry.getKey();
+                        int lineCount = entry.getValue();
+                        int capacity = vaccinationCenter.getInjectionsPerLinePerTimeslot() * lineCount;
+                        VaccinationSlot vaccinationSlot = new VaccinationSlot(
+                                vaccinationSlotId++, vaccinationCenter, timeslot,
+                                vaccineType, lineIndexOffset, lineCount, capacity);
+                        lineIndexOffset += lineCount;
+                        vaccinationSlotList.add(vaccinationSlot);
+                    }
+                }
+            }
+        }
+
+        int personListSize = (totalLineCount * timeslotList.size() * injectionsPerLinePerTimeslot) * 5 / 4; // 25% too many
         List<Person> personList = new ArrayList<>(personListSize);
         long personId = 0L;
         for (int i = 0; i < personListSize; i++) {
             int lastNameI = i / PERSON_FIRST_NAMES.length;
             String name = PERSON_FIRST_NAMES[i % PERSON_FIRST_NAMES.length]
-                    + " " + (lastNameI < 26 ? ((char) ('A' + lastNameI)) + "." : lastNameI + 1);
+                    + " " + (lastNameI < 26 ? ((char) ('A' + lastNameI)) + "." : lastNameI - 25);
             Location location = pickLocation(random);
             LocalDate birthdate = MINIMUM_BIRTH_DATE.plusDays(random.nextInt(BIRTH_DATE_RANGE_LENGTH));
             int age = (int) YEARS.between(birthdate, windowStartDate);
@@ -140,24 +180,12 @@ public class DemoDataGenerator {
                     birthdate, age, firstDoseInjected, firstDoseVaccineType, firstDoseDate);
             personList.add(person);
         }
-
-        List<Injection> injectionList = new ArrayList<>();
-        long injectionId = 0L;
-        for (VaccinationCenter vaccinationCenter : vaccinationCenterList) {
-            for (int dayIndex = 0; dayIndex < windowDaysLength; dayIndex++) {
-                LocalDate date = windowStartDate.plusDays(dayIndex);
-                for (int lineIndex = 0; lineIndex < vaccinationCenter.getLineCount(); lineIndex++) {
-                    VaccineType vaccineType = pickVaccineType(vaccineTypeList, random, null);
-                    for (int timeIndex = 0; timeIndex < injectionsPerLinePerDay; timeIndex++) {
-                        LocalTime time = dayStartTime.plusMinutes(injectionDurationInMinutes * timeIndex);
-                        injectionList.add(new Injection(
-                                injectionId++, vaccinationCenter, lineIndex,
-                                LocalDateTime.of(date, time), vaccineType));
-                    }
-                }
-            }
-        }
-        vaccinationScheduleRepository.save(new VaccinationSchedule(vaccineTypeList, vaccinationCenterList, timeslotDateTimeList, personList, injectionList));
+        vaccinationScheduleRepository.save(new VaccinationSchedule(vaccineTypeList, vaccinationCenterList,
+                timeslotList, vaccinationSlotList, personList));
+        logger.info("Generated dataset with {} vaccination slots, {} injections and {} persons.",
+                vaccinationSlotList.size(),
+                vaccinationSlotList.stream().mapToInt(VaccinationSlot::getCapacity).sum(),
+                personList.size());
     }
 
     public Location pickLocation(Random random) {
